--- a/assignments/week 5/css/small-6.css
+++ b/assignments/week 5/css/small-6.css
@@ -1,28 +1,27 @@
 * { margin: 0; box-sizing: border-box; } 
-
-body { 
-    font-size: .50rem; 
-    line-height: 1rem;
-    font-family: Helvetica, sans-serif ;
-    background-color: lightgray /* */;
-    color: black /* #xxxxxx */;
-    text-align: center;
-    padding: 20px;
-    }
-
-
-  
+header img {
+    width: 150px /*  */;
+    height: auto;
+    float: left;
+    padding: 15px;
+    position: absolute;
+    top: 20px;
+    left: 40px;
+}  
 title {
     font-family: Arial, Courier, sans-serif;
     font-size: 1rem;
 }
-
 header h1 {
     font-size: 1.5rem /* x.xrem  (rem is a unit of measure) */;
     color:darkkhaki/* #xxxxxx */;
     text-align: center;
     padding: 15px;
-
+}
+h1{
+    padding: 60px;
+    font-size: .75rem;
+    text-align: center;
 }
 section h1 {
     padding:20px;
@@ -41,6 +40,16 @@ h3{
     color: darkred;
     padding: 20px;
 }
+body { 
+    font-size: .50rem; 
+    line-height: 1rem;
+    font-family: Helvetica, sans-serif ;
+    background-color: lightgray /* */;
+    color: black /* #xxxxxx */;
+    text-align: center;
+    padding: 20px;
+}
+
 header, main, footer {
     font-size: 1rem;
     line-height: 1rem;
@@ -50,23 +59,11 @@ header, main, footer {
     background-color: darkred /* */;
     color: wheat;
 }
-
-header img {
-    width: 150px /*  */;
-    height: auto;
-    float: left;
-    padding: 15px;
-    position: absolute;
-    top: 20px;
-    left: 40px;
-}
-
  nav ul {
      padding: 10px;
      float: center;
      list-style-type: none   
-  }
-  
+  }  
   nav li {
     text-align: center;
     list-style-type: none;
@@ -83,6 +80,11 @@ header img {
   main{
       max-width: 800px;
       font-size: .75rem;
+  }
+
+  img.forcast {
+          max-width: 400px;
+
   }
   div.summary{
       position: relative;
