--- a/assignments/week 5/css/large-6.css
+++ b/assignments/week 5/css/large-6.css
@@ -46,5 +46,15 @@ ul{
   line-height: 1.4em;
   padding: 20px 45px;
 }
+#googleMap{
+  float: right;
+  margin-right: 30px;
+}
+div.social, footer>p{
+  clear: right;
+}
+div.address {
+  margin-top: 50px;
+}
 
 }
