--- a/assignments/week 5/css/small-6.css
+++ b/assignments/week 5/css/small-6.css
@@ -119,7 +119,7 @@ header, main, footer {
   section.forcast{
     display: none;
   }
-  img#weather{
+  tbody img{
       max-width: 50px;
   }
   article img{ 
