--- a/assignments/week 5/css/large-6.css
+++ b/assignments/week 5/css/large-6.css
@@ -39,6 +39,9 @@ ul{
   font-size: 1.2rem;
   padding: 10px
 }
+.forcast tr th img{
+  max-width: 75px;
+}
 .forecast td,
 .forcast th {
   border: 3px solid khaki
