--- a/assignments/week 5/css/large-6.css
+++ b/assignments/week 5/css/large-6.css
@@ -39,9 +39,6 @@ ul{
   font-size: 1.2rem;
   padding: 10px
 }
-.forcast tr th img{
-  max-width: 75px;
-}
 .forecast td,
 .forcast th {
   border: 3px solid khaki
@@ -52,9 +49,14 @@ ul{
   line-height: 1.4em;
   padding: 20px 45px;
 }
+.forcast table{
+  margin-left: 100px;
+}
 div.address{
-  float:center;
-  
+  border: 3px;
+  margin-top: 100px;
+  margin-left: 200px;
+  padding: 10px  
 }
 #googleMap{
   float: right;
