--- a/assignments/week 5/css/large-6.css
+++ b/assignments/week 5/css/large-6.css
@@ -31,7 +31,7 @@ ul{
     text-align: center;
   }
   .forcast{
-    display: inline;
+    display: inline-block;
   }
 .forcast th {
   background-color: navy;
@@ -52,12 +52,6 @@ ul{
 .forcast table{
   margin-left: 100px;
 }
-div.address{
-  border: 3px;
-  margin-top: 100px;
-  margin-left: 200px;
-  padding: 10px  
-}
 #googleMap{
   float: right;
   margin-right: 30px;
@@ -67,7 +61,5 @@ div.social, footer>p{
 }
 div.address {
   margin: 100px 0 0 50px;
-  padding: 40px;
 }
-
 }
