--- a/assignments/week 5/css/small-6.css
+++ b/assignments/week 5/css/small-6.css
@@ -41,7 +41,7 @@ h2 {
 h3{
     text-align: center;
     font-size: .75em;
-    color:	#BDB76B;
+    color:#000000;
     padding: 20px;
 }
 body { 
@@ -80,6 +80,39 @@ header, main, footer {
   nav.wrapper
   {
       font-size: .75em;
+  }
+  /* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
   }
   main{
       max-width: 800px;
@@ -139,14 +172,12 @@ div.address{
           }
      
   footer>p {
-      clear: both;
-         
+      clear: both;         
     }
 main.footer{
     max-width: 800px;
 }
 footer {
     font-size: .75em /* smaller */;
-    padding: 20px;
-    
+    padding: 20px;    
 }
