--- a/assignments/week 5/css/small-6.css
+++ b/assignments/week 5/css/small-6.css
@@ -63,6 +63,11 @@ header, main, footer {
     background-color: #8B0000 /* */;
     color:	#F5DEB3;
 }
+nav{
+    background-color: darkkhaki;
+    margin: 0;
+    
+}
  nav ul {
      padding: 10px;
      float: center;
@@ -77,43 +82,10 @@ header, main, footer {
  nav li a{
       text-decoration: none;
   }
-  nav.wrapper
-  {
-      font-size: .75em;
+  nav ul.hide{
+      display: none;
   }
-  /* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
+
   main{
       max-width: 800px;
       font-size: .75em;
