--- a/assignments/week 5/css/large-6.css
+++ b/assignments/week 5/css/large-6.css
@@ -29,6 +29,7 @@ ul{
     border-radius: .3em;
     padding: 1.2rem;
     text-align: center;
+    background-color: darkkhaki;
   }
   .forcast{
     display: inline-block;
