--- a/assignments/week 5/css/small-6.css
+++ b/assignments/week 5/css/small-6.css
@@ -1,4 +1,4 @@
-* { margin: 0; box-sizing: border-box; } 
+* { margin: 0; box-sizing: none;} 
 header img {
     width: 150px /*  */;
     height: auto;
@@ -43,6 +43,7 @@ h3{
     font-size: .75em;
     color:#000000;
     padding: 20px;
+    margin: 0;
 }
 body { 
     font-size: .50em; 
@@ -71,8 +72,8 @@ nav {
 }
  nav ul {
      padding: 10px;
-     float: center;
-     list-style-type: none   
+     list-style-type: none;  
+     background-color: darkkhaki;
   }  
   nav li {
     text-align: center;
