--- a/assignments/week 6/css/large-6.css
+++ b/assignments/week 6/css/large-6.css
@@ -1,6 +1,13 @@
 @media only screen and (min-width: 45em){
-ul{
+nav button{
+  display: none;
+}
+ul.hide{
+  display: inline-block;
+}
+  ul{
     text-align: center;
+    display: inline-block;
 }
   
   li {
@@ -19,11 +26,14 @@ ul{
   li a:hover {
     background-color:powderblue;
   }
+  section.hero{
+    margin-bottom: 35px;
+}
   /*5 Day Forecast*/
   table {
     margin:auto;
   }
-  section.forcast{
+  section.forecast{
     display: block;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: .3em;
@@ -31,10 +41,10 @@ ul{
     text-align: center;
     background-color: darkkhaki;
   }
-  .forcast{
+  .forecast{
     display: inline-block;
   }
-.forcast th {
+.forecast th {
   background-color: navy;
   color: #fff;
   font-size: 1.2rem;
@@ -62,5 +72,8 @@ div.social, footer>p{
 }
 div.address {
   margin: 100px 0 0 50px;
+}
+main.footer{
+  max-width: 800px;
 }
 }
