--- a/assignments/week 6/css/small-6.css
+++ b/assignments/week 6/css/small-6.css
@@ -1,29 +1,26 @@
 * { margin: 0; box-sizing: none;} 
 header img {
-    width: 150px /*  */;
+    width: 50px /*  */;
     height: auto;
-    float: left;
-    position: absolute;
-    top: 20px;
-    left: 40px;
 }
 .motto {
-    display: inline;
+    display: inline-block;
 }
   
 title {
     font-family: Arial, Courier, sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
 }
 header h1 {
     font-size: 1.5em /* x.xrem  (rem is a unit of measure) */;
     color:	#BDB76B/* #xxxxxx */;
     text-align: center;
     padding: 15px;
+    margin: 0;
 }
-h1{
-    padding: 60px;
-    font-size: .75em;
+article h1{
+    padding: 15px;
+    font-size: .75rem;
     text-align: center;
 }
 section h1 {
@@ -32,31 +29,30 @@ section h1 {
     font-size: 1em;
 }
 h2 {
-    font-size: .75em /* x.xrem */;
-    text-align: right;
+    font-size: 1rem /* x.xrem */;
+    text-align: center;
     border-bottom: 1px solid #bbb;
     padding: 15px;
 }
 h3{
     text-align: center;
-    font-size: .75em;
+    font-size: 1rem;
     color:#000000;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     margin: 0;
 }
 body { 
-    font-size: .50em; 
+    font-size: 16px; 
     line-height: 1em;
     font-family: Helvetica, sans-serif ;
     background-color: 	#D3D3D3 /* */;
     color: 	#000000 /* #xxxxxx */;
     text-align: center;
-    padding: 20px;
 }
 
 header, main, footer {
-    font-size: 1em;
-    line-height: 1em;
+    font-size: 1rem;
+    line-height: 1rem;
     margin: 10px auto;
     font-family: Areial Header, sans-serif;
     text-align: center;
@@ -122,10 +118,10 @@ nav {
   img.road{
       max-width: 100%;
   }
-  section.forcast{
+  section.forecast{
     display: none;
   }
-  section.forcast img{
+  section.forecast img{
       max-width: auto;
   }
   article img{ 
@@ -135,21 +131,18 @@ div.address{
     align-self: auto;
 }
  div.social img{
-      max-width: 75px;
-      float: left;
+      max-width: 35px;
+      
         }
 
   #googleMap{
-     align-items: center ;
-     margin-right: 30px;
-          }
+     margin: auto;
+}
      
   footer>p {
       clear: both;         
     }
-main.footer{
-    max-width: 800px;
-}
+
 footer {
     font-size: .75em /* smaller */;
     padding: 20px;    
