--- a/assignments/week 7/css/small-7.css
+++ b/assignments/week 7/css/small-7.css
@@ -56,7 +56,7 @@ header, main, footer {
     margin: 10px auto;
     font-family: Areial Header, sans-serif;
     text-align: center;
-    background-color: #8B0000 /* */;
+    background-color: palegreen /* */;
     color:	#F5DEB3;
     border: none;
 }
@@ -101,7 +101,7 @@ nav {
        position: absolute;
        top: 15px;
        left: 15px;
-       background-color: rgba(139, 0, 0,.5);
+       background-color: rgb(152, 251,152);
       
   }
   ul.weather 
