--- a/assignments/week 7/css/small-7.css
+++ b/assignments/week 7/css/small-7.css
@@ -1,153 +1,206 @@
-* { margin: 0; box-sizing: none;} 
+* {
+    margin: 0;
+    box-sizing: none;
+}
+
 header img {
-    width: 50px /*  */;
+    width: 50px
+        /*  */
+    ;
     height: auto;
 }
+
 .motto {
     display: inline-block;
 }
-  
+
 title {
     font-family: Arial, Courier, sans-serif;
     font-size: 1rem;
 }
+
 header h1 {
-    font-size: 1.5em /* x.xrem  (rem is a unit of measure) */;
-    color:black/* #xxxxxx */;
+    font-size: 1.5em
+        /* x.xrem  (rem is a unit of measure) */
+    ;
+    color: black
+        /* #xxxxxx */
+    ;
     text-align: center;
     padding: 15px;
     margin: 0;
 }
-article h1{
+
+article h1 {
     padding: 15px;
     font-size: .75rem;
     text-align: center;
 }
+
 section h1 {
-    padding:20px;
+    padding: 20px;
     text-align: center;
     font-size: 1em;
 }
+
 h2 {
-    font-size: 1rem /* x.xrem */;
+    font-size: 1rem
+        /* x.xrem */
+    ;
     text-align: center;
     border-bottom: 1px solid #bbb;
     padding: 15px;
 }
-h3{
+
+h3 {
     text-align: center;
     font-size: 1rem;
-    color:#000000;
+    color: #000000;
     padding: 20px 20px 0 20px;
     margin: 0;
 }
-img.myphoto{
-    max-width: 100%;
+
+img.myphoto {
+    width: 100%;
 }
-body { 
-    font-size: 16px; 
+
+body {
+    font-size: 16px;
     line-height: 1em;
-    font-family: Helvetica, sans-serif ;
-    background-color: 	#D3D3D3 /* */;
-    color: 	#000000 /* #xxxxxx */;
+    font-family: Helvetica, sans-serif;
+    background-color: #D3D3D3
+        /* */
+    ;
+    color: #000000
+        /* #xxxxxx */
+    ;
     text-align: center;
 }
 
-header, main, footer {
+header,
+main,
+footer {
     font-size: 1rem;
     line-height: 1rem;
     margin: 10px auto;
     font-family: Areial Header, sans-serif;
     text-align: center;
-    background-color:rgb(152, 152, 201)/* */;
+    background-color: rgb(152, 152, 201)
+        /* */
+    ;
     color: black;
     border: none;
 }
+
 nav {
-    background-color:  rgb(152, 152, 201);
+    background-color: rgb(152, 152, 201);
     margin: 0;
 
 }
- nav ul {
-     padding: 10px;
-     list-style-type: none;  
-     background-color: rgb(152, 152, 201);
-  }  
-  nav li {
+
+nav ul {
+    list-style-type: none;
+    background-color: rgb(152, 152, 201);
+    padding: 0;
+}
+
+nav li {
     text-align: center;
     list-style-type: none;
-    padding: 5px;
     font-size: .75em;
-  }
- nav li a{
-      text-decoration: none;
-  }
-  nav ul.hide{
-      display: none;
-  }
-
-  main{
-      max-width: 800px;
-      font-size: .75em;
-  }
-
-  img.forcast {
-          max-width: 400px;
-
-  }
-  
-  div.summary{
-      position: relative;
-      
-  }
-  div.summary div{
-       position: absolute;
-       top: 15px;
-       left: 15px;
-       background-color: rgb(152, 152, 201);
-      
-  }
-  ul.weather 
-  {
-      padding: 0;
-  }
-  ul.weather li
-    { margin: 5px;
-      list-style-type: none;
-      padding: 0;
-      text-align: center;
-      display: block;
-    }
-  img.road{
-      max-width: 100%;
-  }
-  section.forecast{
-    display: none;
-  }
-  section.forecast img{
-      max-width: auto;
-  }
-  article img{ 
-      max-width: 100%;
 }
-div.address{
+
+nav li a {
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+}
+
+nav ul.hide {
+    display: none;
+}
+
+nav li.active {
+    background-color: rgb(60, 60, 216);
+    color: white;
+}
+
+li a:hover {
+    background-color: gray;
+}
+
+main {
+    max-width: 800px;
+    font-size: .75em;
+}
+
+img.forcast {
+    max-width: 400px;
+
+}
+
+section.hero {
+    position: relative;
+
+}
+
+section.hero div {
+    position: absolute;
+    top: 75px;
+    left: 15px;
+    background-color: rgba(152, 152, 201, 0.603);
+
+}
+
+ul.weather {
+    padding: 0;
+}
+
+ul.weather li {
+    margin: 5px;
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+    display: block;
+}
+
+img.road {
+    max-width: 100%;
+}
+
+section.forecast {
+    display: none;
+}
+
+section.forecast img {
+    max-width: auto;
+}
+
+article img {
+    max-width: 100%;
+}
+
+div.address {
     align-self: auto;
 }
- div.social img{
-      max-width: 35px;
-      
-        }
 
-  #googleMap{
-     margin: auto;
+div.social img {
+    max-width: 35px;
+
 }
-     
-  footer>p {
-      clear: both;         
-    }
+
+#googleMap {
+    margin: auto;
+}
+
+footer>p {
+    clear: both;
+}
 
 footer {
-    font-size: .75em /* smaller */;
-    padding: 20px;    
+    font-size: .75em
+        /* smaller */
+    ;
+    padding: 20px;
     max-width: 800px;
 }
