--- a/assignments/week 7/css/large-7.css
+++ b/assignments/week 7/css/large-7.css
@@ -70,10 +70,14 @@
   }
   .grid{
     display: grid;
-    grid-template-columns: 2tr 2tr 2t;
-    grid-template-rows: 200px 200px 200px;
+    grid-template-columns: repeat(3, 2tr);
+    grid-template-rows: repeat(3, 200px);
     grid-gap: 50px;
-
+}
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
   #googleMap {
