--- a/assignments/week 7/css/large-7.css
+++ b/assignments/week 7/css/large-7.css
@@ -23,6 +23,9 @@
   ul.hide {
     display: inline-flex;
   }
+  nav ul.hide {
+    display: inline-flex;
+  }
 
   section.hero {
     margin-bottom: 35px;
