--- a/assignments/week 7/css/large-7.css
+++ b/assignments/week 7/css/large-7.css
@@ -71,7 +71,7 @@
   .forcast table {
     margin-left: 100px;
   }
-  .grid{
+  section.gallery{
     display: grid;
     grid-template-columns: repeat(3, 2tr);
     grid-template-rows: repeat(3, 200px);
