--- a/assignments/week 7/css/small-7.css
+++ b/assignments/week 7/css/small-7.css
@@ -132,7 +132,7 @@ li a:hover {
 main {
     max-width: 800px;
     font-size: .75em;
-    background-color: whitesmoke;
+    background-color: lightgray;
 }
 
 img.forcast {
