--- a/assignments/week 7/css/small-7.css
+++ b/assignments/week 7/css/small-7.css
@@ -102,6 +102,7 @@ nav ul {
     list-style-type: none;
     background-color: rgb(152, 152, 201);
     padding: 0;
+    display: inline-flex;
 }
 
 nav li {
