--- a/assignments/week 8/css/tablebuild.css
+++ b/assignments/week 8/css/tablebuild.css
@@ -1,5 +1,14 @@
-/*spacing*/
+* { margin: 0; box-sizing: border-box; } 
 
+header{
+    margin: 0;
+}
+header, footer{
+    background-color: #628cab;
+}
+header{
+    color: white;
+}
 table{
     table-layout: fixed;
     width: 100%;
@@ -7,7 +16,7 @@ table{
     border: 3px solid #628cab;
     box-shadow: 1em;
 }
-html{
+main{
     font-family: Ubuntu, sans-serif;
     color: black
 }
