--- a/assignments/week 8/css/small-8.css
+++ b/assignments/week 8/css/small-8.css
@@ -211,3 +211,12 @@ footer {
     padding: 20px;
     max-width: 800px;
 }
+form {
+        text-align: left;
+        margin-left: 75px;
+        padding: 20px;
+}
+input  {
+    padding: 10px;
+    box-sizing: border-box;
+}
