--- a/assignments/week 8/css/small-8.css
+++ b/assignments/week 8/css/small-8.css
@@ -185,6 +185,9 @@ section.forecast img {
 article img {
     max-width: 100%;
 }
+article p{
+    padding: 15px;
+}
 
 div.gallery {
     display: grid;
