--- a/assignments/week 8/css/stormcenter-8.css
+++ b/assignments/week 8/css/stormcenter-8.css
@@ -88,15 +88,17 @@ input[type=tel] {
       margin: 8px 0;
       border-radius: 4px;
   }
-  
+  #text{
+      margin: 8px;
+  }
 input[type=radio]{
-    margin: 8px 0;
+    margin: 5px 0;
 
 }
 textarea{
     margin: 8px 0;
     border-radius: 4px;
-    width: 75%;
+    width: 100%;
 }
 button{
     border-radius: 4px;
