--- a/assignments/week 9/css/small-8.css
+++ b/assignments/week 9/css/small-8.css
@@ -221,7 +221,30 @@ footer {
     padding: 20px;
     max-width: 800px;
 }
+/*Home page*/
 
+section.home {
+    display: grid;
+    grid-gap: 15px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+section.home article {
+    background-color:  rgb(152, 152, 201);
+    border: 1px solid black;
 
+}
+section.home img {
+    max-width: 100%;
+}
+section.home article:nth-of-type(1){
+    order:3;  
+}
+section.home article:nth-of-type(2){
+    order:1;  
+}
+section.home article:nth-of-type(3){
+    order:2;  
+}
 
 
