--- a/assignments/week 9/css/sytle.css
+++ b/assignments/week 9/css/sytle.css
@@ -2,6 +2,7 @@
 
 html {
     font-family: 'helvetica neue', helvetica, arial, sans-serif;
+    background-color: blanchedalmond;
   }
   
   body {
@@ -18,6 +19,7 @@ html {
   h1 {
     font-size: 4rem;
     text-align: center;
+    color: red;
   }
   
   header p {
@@ -45,4 +47,5 @@ html {
     font-size: 2.5rem;
     letter-spacing: -5px;
     margin-bottom: 10px;
+    color: blue;
   }
