--- a/assignments/week 9/css/sytle.css
+++ b/assignments/week 9/css/sytle.css
@@ -2,7 +2,7 @@
 
 html {
     font-family: 'helvetica neue', helvetica, arial, sans-serif;
-    background-color: blanchedalmond;
+    background-color: cornsilk;
   }
   
   body {
