--- a/assignments/week 9/css/small-8.css
+++ b/assignments/week 9/css/small-8.css
@@ -236,6 +236,7 @@ section.home article {
 
 section.home img {
     max-width: 100%;
+    margin-top: 30px;
 }
 section.home article:nth-of-type(1){
     order:3;  
