--- a/assignments/weathersite/css/large-8.css
+++ b/assignments/weathersite/css/large-8.css
@@ -53,7 +53,7 @@
   }
 
   .forecast th {
-    background-color: rgb(152, 152, 201);
+    background-color: rgb(72, 128, 72);
     color: #fff;
     font-size: 1.2rem;
     padding: 10px
@@ -62,6 +62,7 @@
   .forecast td,
   .forcast th {
     border: 3px solid gray;
+    border-radius: 15px;
   }
 
   .forecast td {
