--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -9,13 +9,13 @@ header {
 }
 
 header img {
-    max-width: 50px;
+    max-width: 75px;
     align-self: center;
 }
 
 
 title {
-    font-family: Arial, Courier, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1rem;
 }
 
@@ -33,14 +33,18 @@ header h1 {
 
 article h1 {
     padding: 15px;
-    font-size: 1em;
+    font-size: 2em;
     text-align: center;
+}
+article p{
+    font-size: 1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 section h1 {
     padding: 15px;
     text-align: center;
-    font-size: 2em;
+    font-size: 3em;
 }
 
 h2 {
@@ -56,7 +60,7 @@ h3 {
     text-align: center;
     font-size: 1rem;
     color: #000000;
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 20px 20px;
     margin: 0;
 }
 
@@ -67,8 +71,8 @@ img.myphoto {
 body {
     font-size: 16px;
     line-height: 1em;
-    font-family: Helvetica, sans-serif;
-    background-color: #D3D3D3
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: rgb(88, 122, 155, 0.3)
         /* */
     ;
     color: #000000
@@ -83,9 +87,9 @@ footer {
     font-size: 1rem;
     line-height: 1rem;
     margin: 10px auto;
-    font-family: Areial Header, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
-    background-color: rgb(152, 152, 201)
+    background-color: rgb(72, 128, 72);
         /* */
     ;
     color: black;
@@ -93,14 +97,15 @@ footer {
 }
 
 nav {
-    background-color: rgb(152, 152, 201);
+    background-color: rgb(20, 33, 148);
     margin: 0;
+       
 
 }
 
 nav ul {
     list-style-type: none;
-    background-color: rgb(152, 152, 201);
+    background-color: rgb(20, 33, 148);
     padding: 0;
 }
 
@@ -114,6 +119,8 @@ nav li a {
     text-decoration: none;
     padding: 10px;
     display: block;
+    color: white;
+
 }
 
 nav ul.hide {
@@ -121,7 +128,7 @@ nav ul.hide {
 }
 
 nav li.active {
-    background-color: rgb(60, 60, 216);
+    background-color:rgb(72, 128, 72);
     color: white;
 }
 
@@ -132,7 +139,7 @@ li a:hover {
 main {
     max-width: 800px;
     font-size: .75em;
-    background-color: lightgray;
+    background-color: rgb(88, 122, 155);
     margin: auto;
 }
 
@@ -150,13 +157,16 @@ section.hero div {
     position: absolute;
     top: 75px;
     left: 15px;
-    background-color: rgba(152, 152, 201, 0.603);
+    background-color: rgba(72, 128, 72, 0.6);
 
 } 
-main div p {
+main.div p {
     padding-top: 200px; padding-bottom: 200px;
-    font-family: Areial Header, sans-serif;
-    font-size: 2em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 2.5em;
+}
+main.img {
+    padding: 15px 0 0 15px;
 }
 
 ul.weather {
@@ -209,6 +219,7 @@ div.social img {
 
 #googleMap {
     margin: auto;
+    padding: 20px;
 }
 
 footer>p {
@@ -231,7 +242,7 @@ section.home {
     margin-bottom: 50px;
 }
 section.home article {
-    background-color:  rgb(152, 152, 201);
+    background-color:  rgb(72, 128, 72);
     border: 1px solid black;
 }
 
@@ -259,7 +270,7 @@ section.home article:nth-of-type(3){
     max-width: 400px;
     margin: 20px auto;
     padding-bottom: 20px;
-    background-color:  rgb(152, 152, 201);
+    background-color:  rgb(72, 128, 72);
     
 }
 .events h2 {
