--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -13,7 +13,7 @@ header img {
     align-self: center;
 }
 
-
+ 
 title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1rem;
@@ -234,7 +234,7 @@ footer>p {
 footer {
     font-size: .75em;
         color: white;
-    padding: 20px;
+    padding: 0;
     max-width: 800px;
 }
 /*Home page*/
@@ -270,7 +270,7 @@ section.home article:nth-of-type(3){
     max-width: 400px;
     margin: 20px auto;
     padding-bottom: 20px;
-    background-color:  rgb(72, 128, 72);
+    background-color:  rgb(72, 128, 72, 0.5);
     
 }
 .events h2 {
