--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -233,9 +233,10 @@ footer>p {
 
 footer {
     font-size: .75em;
-        color: white;
-    padding: 0;
+    color: white;
+    padding: 20px;
     max-width: 800px;
+    margin-top: 0;
 }
 /*Home page*/
 
