--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -236,7 +236,7 @@ footer {
     color: white;
     padding: 20px;
     max-width: 800px;
-    margin-top: 0;
+    margin-top: auto;
 }
 /*Home page*/
 
